--- a/Anggota.html
+++ b/Anggota.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello World! <br> Saya Adika Ahmad Hanif Nazhir - NIM 2041720171 <br> Nomor Absen 02</h1>
     <h1>Saya Kevin Natanael Wijaya - NIM 2041720091 <br> Nomor Absen 15</h1>
+    <h1>Saya Andi Mushawwir Rahmat - NIM 2041720235 <br> Nomor Absen 08</h1>
 </body>
 
 </html>
